# music

./: .editorconfig  .env.template  .flake8  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: cb3cf086c982_add_models_author_genre_tag_track.py
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: author.py  genre.py  healthcheck.py  tag.py  track.py
app/core/: config.py
app/db/: base.py  base_class.py  session.py
app/models/: models.py
app/schemas/: author.py  genre.py  tag.py  track.py
app/services/: author.py  genre.py  tag.py  track.py
app/settings/: settings.py
tests/api/v1/: test_healtcheck.py
